Finished lasagna page, and completed main page

--- a/index.html
+++ b/index.html
@@ -7,18 +7,14 @@
 </head>
 <body>
 <h1>
-    Odin Recipes
+    Recipes from Jupiter!
 </h1>
-<h1>
-    Lasagna Recipe 
-</h1>
-<a href="recipes/lasagna.html"> Recipe Title</a>
-<img src="./img/lasagna.jpg " alt="Tasty!!" width="400" height="400">
-<h1>Description</h1>
-<p>Tasty ass lasagna you and your whole fam can enjoy!</p>
+<img src="./img/brown" alt="Tasty!!" width="400" height="400">
+<h2>Collection of wacky recipes</h2>
 <ul>
-    <li>4 Tomatoes</li>
-    <
-
+    <li> <a href="recipes/lasagna.html">Wacky Lasagna! </a></li>
+    <li> <a href="recipes/lasagna.html">Wacky Lasagna! </a></li>
+    <li> <a href="recipes/lasagna.html">Wacky Lasagna! </a></li>
+    
 </ul>
 </html>
