--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h2>Collection of wacky recipes</h2>
 <ul>
     <li> <a href="recipes/lasagna.html">Wacky Lasagna! </a></li>
-    <li> <a href="recipes/lasagna.html">Wacky Lasagna! </a></li>
+    <li> <a href="recipes/dsteak.html">Dragon Steak! </a></li>
     <li> <a href="recipes/lasagna.html">Wacky Lasagna! </a></li>
     
 </ul>
