Finished last recipe & completed project

--- a/recipes/dsteak.html
+++ b/recipes/dsteak.html
@@ -26,4 +26,5 @@
     <li>Add spices</li>
     <li>Take out dragon, lather with BBQ sauce and enjoy!</li>
 </ol>
-</html>
+<a href="../index.html">Return to Main Page</a>
+</html> 
