--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -28,4 +28,5 @@
     <li>Train the little guy to make lasagna</li>
     <li>Profit! Enjoy that Wacky Lasagna!</li>
 </ol>
+<a href="../index.html">Return to Main Page</a>
 </html>
