--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <ul>
     <li> <a href="recipes/lasagna.html">Wacky Lasagna! </a></li>
     <li> <a href="recipes/dsteak.html">Dragon Steak! </a></li>
-    <li> <a href="recipes/lasagna.html">Wacky Lasagna! </a></li>
+    <li> <a href="recipes/popcicle.html">Paint Popcicle! </a></li>
     
 </ul>
 </html>
